oldParser/Generated/MyLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\sor\Documents\Visual Studio 2012\Projects\MyLangParser\MyLang.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace MyLang {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class MyLangParser : Parser {
	public const int
		T__31=1, T__30=2, T__29=3, T__28=4, T__27=5, T__26=6, T__25=7, T__24=8, 
		T__23=9, T__22=10, T__21=11, T__20=12, T__19=13, T__18=14, T__17=15, T__16=16, 
		T__15=17, T__14=18, T__13=19, T__12=20, T__11=21, T__10=22, T__9=23, T__8=24, 
		T__7=25, T__6=26, T__5=27, T__4=28, T__3=29, T__2=30, T__1=31, T__0=32, 
		COMMENT=33, STRING_LIT=34, CHAR_LIT=35, PTR_TO_ARY=36, TRP_POINT=37, DBL_POINT=38, 
		DBL_LBRACK=39, DBL_RBRACK=40, DBL_AMP=41, DBL_PLUS=42, DBL_MINUS=43, RARROW=44, 
		LSHIFT=45, SCOPE=46, AT_BANG=47, AT_QUEST=48, AT_PLUS=49, AT_LBRACK=50, 
		LBRACK=51, RBRACK=52, LCURLY=53, RCURLY=54, LPAREN=55, RPAREN=56, AUTOINDEX=57, 
		AT=58, AMP=59, STAR=60, SLASH=61, MOD=62, PLUS=63, MINUS=64, SEMI=65, 
		COLON=66, COMMA=67, POINT=68, EQ=69, NEQ=70, LTEQ=71, GTEQ=72, LT=73, 
		GT=74, ASSIGN=75, UNSIGNED=76, SIGNED=77, VOID=78, BOOL=79, CHAR=80, CHAR16=81, 
		CHAR32=82, WCHAR=83, SHORT=84, INT=85, LONG=86, FLOAT=87, DOUBLE=88, NS=89, 
		VOLATILE=90, CONST=91, MUTABLE=92, SQRT=93, UNION=94, CLASS=95, STRUCT=96, 
		FUNC=97, METH=98, ENUM=99, PROP=100, FIELDS=101, FIELD=102, OPERATOR=103, 
		VAR=104, FOR=105, TIMES=106, IF=107, ELSE=108, RETURN=109, ID=110, FLOAT_LIT=111, 
		INTEGER_LIT=112, NL=113, WS=114, NEWLINES=115, COMMENTS=116;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'poly'", "'force'", "'nothing'", "'*='", "'ctor'", "'pod'", 
		"'throw'", "'.*'", "'|='", "'new'", "'nop'", "'|'", "'!'", "'sizeof'", 
		"'<<='", "'->*'", "'-='", "'**'", "'&='", "'?'", "'>>='", "'break'", "'+='", 
		"'^='", "'permit'", "'static'", "'delete'", "'^'", "'||'", "'%='", "'/='", 
		"'~'", "COMMENT", "STRING_LIT", "CHAR_LIT", "'[*]'", "'...'", "'..'", 
		"'[['", "']]'", "'&&'", "'++'", "'--'", "'->'", "'<<'", "'::'", "'@!'", 
		"'@?'", "'@+'", "'@['", "'['", "']'", "'{'", "'}'", "'('", "')'", "AUTOINDEX", 
		"'@'", "'&'", "'*'", "'/'", "'%'", "'+'", "'-'", "';'", "':'", "','", 
		"'.'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'='", "'unsigned'", 
		"'signed'", "'void'", "'bool'", "'char'", "'char16_t'", "'char32_t'", 
		"'wchar_t'", "'short'", "'int'", "'long'", "'float'", "'double'", "'namespace'", 
		"'volatile'", "'const'", "'mutable'", "'sqrt'", "'union'", "'class'", 
		"'struct'", "'func'", "'meth'", "'enum'", "'prop'", "'fields'", "'field'", 
		"'operator'", "'var'", "'for'", "'times'", "'if'", "'else'", "'return'", 
		"ID", "FLOAT_LIT", "INTEGER_LIT", "NL", "WS", "NEWLINES", "COMMENTS"
	};
	public const int
		RULE_scope_OP = 0, RULE_post_OP = 1, RULE_pre_OP = 2, RULE_assign_OP = 3, 
		RULE_pow_OP = 4, RULE_mult_OP = 5, RULE_add_OP = 6, RULE_shift_OP = 7, 
		RULE_bitand_OP = 8, RULE_bitxor_OP = 9, RULE_bitor_OP = 10, RULE_and_OP = 11, 
		RULE_or_OP = 12, RULE_mem_OP = 13, RULE_memptr_OP = 14, RULE_order_OP = 15, 
		RULE_equal_OP = 16, RULE_preOpExpr = 17, RULE_castExpr = 18, RULE_sizeofExpr = 19, 
		RULE_newExpr = 20, RULE_deleteExpr = 21, RULE_expr = 22, RULE_exprs = 23, 
		RULE_tt_exp = 24, RULE_prog = 25, RULE_toplevel = 26, RULE_attrib = 27, 
		RULE_id_opt_value = 28, RULE_class_expr = 29, RULE_class_extened_expr = 30, 
		RULE_field_expr = 31, RULE_vars_decl = 32, RULE_prop_expr = 33, RULE_idOrLit = 34, 
		RULE_parameter = 35, RULE_parameters = 36, RULE_initializationList = 37, 
		RULE_argumentList = 38, RULE_ctor_decl = 39, RULE_funcmeth_decl = 40, 
		RULE_operator_decl = 41, RULE_statements = 42, RULE_statement = 43, RULE_anyType = 44, 
		RULE_typePtr = 45, RULE_typeQualifier = 46, RULE_signQualifier = 47, RULE_advancedType = 48, 
		RULE_idTplType = 49, RULE_anyTypeOrConsts = 50, RULE_anyTypeOrConst = 51, 
		RULE_basicType = 52, RULE_characterType = 53, RULE_integerType = 54, RULE_floatingType = 55, 
		RULE_anyTypeCS = 56, RULE_expr_old = 57, RULE_comment = 58;
	public static readonly string[] ruleNames = {
		"scope_OP", "post_OP", "pre_OP", "assign_OP", "pow_OP", "mult_OP", "add_OP", 
		"shift_OP", "bitand_OP", "bitxor_OP", "bitor_OP", "and_OP", "or_OP", "mem_OP", 
		"memptr_OP", "order_OP", "equal_OP", "preOpExpr", "castExpr", "sizeofExpr", 
		"newExpr", "deleteExpr", "expr", "exprs", "tt_exp", "prog", "toplevel", 
		"attrib", "id_opt_value", "class_expr", "class_extened_expr", "field_expr", 
		"vars_decl", "prop_expr", "idOrLit", "parameter", "parameters", "initializationList", 
		"argumentList", "ctor_decl", "funcmeth_decl", "operator_decl", "statements", 
		"statement", "anyType", "typePtr", "typeQualifier", "signQualifier", "advancedType", 
		"idTplType", "anyTypeOrConsts", "anyTypeOrConst", "basicType", "characterType", 
		"integerType", "floatingType", "anyTypeCS", "expr_old", "comment"
	};

	public override string GrammarFileName { get { return "MyLang.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


		protected const int EOF = Eof;

	public MyLangParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class Scope_OPContext : ParserRuleContext {
		public Scope_OPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scope_OP; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.EnterScope_OP(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.ExitScope_OP(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLangVisitor<TResult> typedVisitor = visitor as IMyLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScope_OP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Scope_OPContext scope_OP() {
		Scope_OPContext _localctx = new Scope_OPContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_scope_OP);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118; Match(SCOPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Post_OPContext : ParserRuleContext {
		public Post_OPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_post_OP; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.EnterPost_OP(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.ExitPost_OP(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLangVisitor<TResult> typedVisitor = visitor as IMyLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPost_OP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Post_OPContext post_OP() {
		Post_OPContext _localctx = new Post_OPContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_post_OP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			_la = _input.La(1);
			if ( !(_la==DBL_PLUS || _la==DBL_MINUS) ) {
			_errHandler.RecoverInline(this);
			}
			Consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Pre_OPContext : ParserRuleContext {
		public Pre_OPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pre_OP; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.EnterPre_OP(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.ExitPre_OP(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLangVisitor<TResult> typedVisitor = visitor as IMyLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPre_OP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Pre_OPContext pre_OP() {
		Pre_OPContext _localctx = new Pre_OPContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_pre_OP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			_la = _input.La(1);
			if ( !(((((_la - 13)) & ~0x3f) == 0 && ((1L << (_la - 13)) & ((1L << (T__19 - 13)) | (1L << (T__0 - 13)) | (1L << (DBL_PLUS - 13)) | (1L << (DBL_MINUS - 13)) | (1L << (AMP - 13)) | (1L << (STAR - 13)) | (1L << (PLUS - 13)) | (1L << (MINUS - 13)))) != 0)) ) {
			_errHandler.RecoverInline(this);
			}
			Consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Assign_OPContext : ParserRuleContext {
		public Assign_OPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assign_OP; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.EnterAssign_OP(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.ExitAssign_OP(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLangVisitor<TResult> typedVisitor = visitor as IMyLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssign_OP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Assign_OPContext assign_OP() {
		Assign_OPContext _localctx = new Assign_OPContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_assign_OP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__28) | (1L << T__23) | (1L << T__17) | (1L << T__15) | (1L << T__13) | (1L << T__11) | (1L << T__9) | (1L << T__8) | (1L << T__2) | (1L << T__1))) != 0) || _la==ASSIGN) ) {
			_errHandler.RecoverInline(this);
			}
			Consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Pow_OPContext : ParserRuleContext {
		public Pow_OPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pow_OP; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.EnterPow_OP(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.ExitPow_OP(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLangVisitor<TResult> typedVisitor = visitor as IMyLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPow_OP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Pow_OPContext pow_OP() {
		Pow_OPContext _localctx = new Pow_OPContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_pow_OP);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126; Match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Mult_OPContext : ParserRuleContext {
		public Mult_OPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mult_OP; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.EnterMult_OP(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.ExitMult_OP(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLangVisitor<TResult> typedVisitor = visitor as IMyLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMult_OP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Mult_OPContext mult_OP() {
		Mult_OPContext _localctx = new Mult_OPContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_mult_OP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STAR) | (1L << SLASH) | (1L << MOD))) != 0)) ) {
			_errHandler.RecoverInline(this);
			}
			Consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Add_OPContext : ParserRuleContext {
		public Add_OPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_add_OP; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.EnterAdd_OP(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.ExitAdd_OP(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLangVisitor<TResult> typedVisitor = visitor as IMyLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdd_OP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Add_OPContext add_OP() {
		Add_OPContext _localctx = new Add_OPContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_add_OP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130;
			_la = _input.La(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.RecoverInline(this);
			}
			Consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Shift_OPContext : ParserRuleContext {
		public Shift_OPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shift_OP; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.EnterShift_OP(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.ExitShift_OP(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLangVisitor<TResult> typedVisitor = visitor as IMyLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShift_OP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Shift_OPContext shift_OP() {
		Shift_OPContext _localctx = new Shift_OPContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_shift_OP);
		try {
			State = 135;
			switch (_input.La(1)) {
			case LSHIFT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 132; Match(LSHIFT);
				}
				break;
			case GT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 133; Match(GT);
				State = 134; Match(GT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Bitand_OPContext : ParserRuleContext {
		public Bitand_OPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitand_OP; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.EnterBitand_OP(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyLangListener typedListener = listener as IMyLangListener;
			if (typedListener != null) typedListener.ExitBitand_OP(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLangVisitor<TResult> typedVisitor = visitor as IMyLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitand_OP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Bitand_OPContext bitand_OP() {
		Bitand_OPContext _localctx = new Bitand_OPContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_bitand_OP);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137; Match(AMP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
